--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,52 +8,52 @@
     <script>
         //this section deals with the web sockets for command
         let socket;
-        function initWebSocket(){
+        function initWebSocket() {
             socket = new WebSocket("ws://localhost:8080/ws");
-            socket.onopen = function (event){
-                console.log("Websocket connection opened: ",event);
+            socket.onopen = function (event) {
+                console.log("Websocket connection opened: ", event);
             }
-            socket.onmessage = function (event){
+            socket.onmessage = function (event) {
                 console.log('Message received from server:', event.data);
             }
-            socket.onclose = function(event) {
+            socket.onclose = function (event) {
                 console.log('WebSocket connection closed:', event);
             };
-            socket.onerror = function(error) {
+            socket.onerror = function (error) {
                 console.log('WebSocket error:', error);
             };
         }
 
         //this function controls the DOM part of the event listener
-        window.addEventListener("load",()=> {
+        window.addEventListener("load", () => {
             const mobileRef = document.getElementById("app_render");
             // const clickRef = document.getElementById("app_clicker");
             let startTime = null;
             let startPos = null;
-            function eventBalancer(stringName,event) {
+            function eventBalancer(stringName, event) {
                 const bbdBox = mobileRef.getBoundingClientRect();
-                const scaleX  = 393 / mobileRef.clientWidth;
+                const scaleX = 393 / mobileRef.clientWidth;
                 const scaleY = 852 / mobileRef.clientHeight;
-                let x = (event.clientX - bbdBox.left)*scaleX;
-                let y = (event.clientY - bbdBox.top)*scaleY;
-                return {x, y}
+                let x = (event.clientX - bbdBox.left) * scaleX;
+                let y = (event.clientY - bbdBox.top) * scaleY;
+                return { x, y }
             }
-            mobileRef.addEventListener("mousedown", (event)=> {
+            mobileRef.addEventListener("mousedown", (event) => {
                 startTime = Date.now();
                 startPos = eventBalancer("mousedown", event);
             })
 
-            mobileRef.addEventListener("mouseup", (event)=> {
+            mobileRef.addEventListener("mouseup", (event) => {
                 let endTime = Date.now();
                 if ((endTime - startTime) < 200) {
                     const pressEvent = eventBalancer("click", event);
-                    let tap_command = `idb ui tap ${Math.round(pressEvent.x)} ${Math.round(pressEvent.y)}`
+                    let tap_command = `idb ui tap ${Math.round(pressEvent.x)} ${Math.round(pressEvent.y)} --duration .1`
                     sendMessageWebsocketCOMMANDS(tap_command);
                     // clickRef.style.left = `${event.clientX}px`;
                     // clickRef.style.top = `${event.clientY}px`;
                 } else {
                     let endPos = eventBalancer("mouseup", event);
-                    let swipe_command = `idb ui swipe ${Math.round(startPos.x)} ${Math.round(startPos.y)} ${Math.round(endPos.x)} ${Math.round(endPos.y)} --duration ${(endTime - startTime)/1000}`
+                    let swipe_command = `idb ui swipe ${Math.round(startPos.x)} ${Math.round(startPos.y)} ${Math.round(endPos.x)} ${Math.round(endPos.y)} --duration ${(endTime - startTime) / 1000}`
                     sendMessageWebsocketCOMMANDS(swipe_command);
                 }
             })
@@ -126,9 +127,9 @@
         }
 
         // Offer to receive 1 audio, and 2 video tracks
-        pc.addTransceiver('audio', {'direction': 'recvonly'})
-        pc.addTransceiver('video', {'direction': 'recvonly'})
-        pc.addTransceiver('video', {'direction': 'recvonly'})
+        pc.addTransceiver('audio', { 'direction': 'recvonly' })
+        pc.addTransceiver('video', { 'direction': 'recvonly' })
+        pc.addTransceiver('video', { 'direction': 'recvonly' })
         pc.createOffer().then(d => pc.setLocalDescription(d)).catch(log)
 
         window.startSession = () => {
@@ -161,37 +162,40 @@
         }
     </style>
 </head>
+
 <body>
-Browser base64 Session Description<br/>
-<textarea id="localSessionDescription" readonly="true"></textarea> <br/>
+    Browser base64 Session Description<br />
+    <textarea id="localSessionDescription" readonly="true"></textarea> <br />
 
-Golang base64 Session Description<br/>
-<textarea id="remoteSessionDescription"> </textarea> <br/>
-<button onclick="window.startSession()"> Start Session</button>
-<br/>
+    Golang base64 Session Description<br />
+    <textarea id="remoteSessionDescription"> </textarea> <br />
+    <button onclick="window.startSession()"> Start Session</button>
+    <br />
 
-<br/>
+    <br />
 
-<br/>
-<!--Send a message to the server:<br/>-->
-<!--<input type="text" id="messageInput" placeholder="Type your message here">-->
-<!--<button onclick="window.sendMessage()">Send Message</button>-->
-<!--<br/>-->
+    <br />
+    <!--Send a message to the server:<br/>-->
+    <!--<input type="text" id="messageInput" placeholder="Type your message here">-->
+    <!--<button onclick="window.sendMessage()">Send Message</button>-->
+    <!--<br/>-->
 
-Send a message to the server:<br/>
-<input type="text" id="messageInput" placeholder="Type a message">
-<button onclick="sendMessageWebsocket()">Send</button>
-<br/>
+    Send a message to the server:<br />
+    <input type="text" id="messageInput" placeholder="Type a message">
+    <button onclick="sendMessageWebsocket()">Send</button>
+    <br />
 
-Video<br/>
-<div id="remoteVideos" style="background:none;height:1343px;width:640px;position: relative">
-    <div style="width:100%;height: 100%;background: none;position: absolute; left: 0;top: 0;z-index: 3" id="app_render">
+    Video<br />
+    <div id="remoteVideos" style="background:none;height:1343px;width:640px;position: relative">
+        <div style="width:100%;height: 100%;background: none;position: absolute; left: 0;top: 0;z-index: 3"
+            id="app_render">
+        </div>
     </div>
-</div>
-<br/>
+    <br />
 
-Logs<br/>
-<div id="div"></div>
+    Logs<br />
+    <div id="div"></div>
 
 </body>
+
 </html>
